syntax = "proto3";

package v2ray.core.proxy.hysteria2;
option csharp_namespace = "V2Ray.Core.Proxy.Hysteria2";
option go_package = "github.com/v2fly/v2ray-core/v4/proxy/hysteria2";
option java_package = "com.v2ray.core.proxy.hysteria2";
option java_multiple_files = true;

import "common/net/packetaddr/config.proto";
import "common/protocol/server_spec.proto";

message Account {
}

message ClientConfig {
  repeated v2ray.core.common.protocol.ServerEndpoint server = 1;
}

message ServerConfig {
  v2ray.core.net.packetaddr.PacketAddrType packet_encoding = 1;
}
