syntax = "proto3";

package v2ray.core.proxy.mixed.simplified;
option csharp_namespace = "V2Ray.Core.Proxy.Mixed.Simplified";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/mixed/simplified";
option java_package = "com.v2ray.core.proxy.mixed.simplified";
option java_multiple_files = true;

import "common/protoext/extensions.proto";
import "common/net/address.proto";
import "common/net/packetaddr/config.proto";

message ServerConfig{
  option (v2ray.core.common.protoext.message_opt).type = "inbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "mixed";

  v2ray.core.common.net.IPOrDomain address = 3;
  bool udp_enabled = 4;
  v2ray.core.net.packetaddr.PacketAddrType packet_encoding = 7;
}
